--- a/TerrariaServerCS/TerrariaServerCS.csproj
+++ b/TerrariaServerCS/TerrariaServerCS.csproj
@@ -46,6 +46,7 @@
     <Compile Include="TerrariaServerEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerrariaServerArguments.cs" />
+    <Compile Include="TerrariaServerFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
