Added icon. Added status bar info. Thread safe methods now intelligently run if the calling object invoke cannot be completed and check if the current object is disposed.

--- a/TerrariaServerCSGUI/TerrariaServerCSGUI.csproj
+++ b/TerrariaServerCSGUI/TerrariaServerCSGUI.csproj
@@ -89,6 +89,7 @@
     <Content Include="Resources\Bunny-Animated.gif" />
     <Content Include="Resources\Bunny.png" />
     <Content Include="Resources\Bunny-Corrupt.png" />
+    <Content Include="Resources\BunnyIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
