--- a/TerrariaServerCSGUI/TerrariaServerCSGUI.csproj
+++ b/TerrariaServerCSGUI/TerrariaServerCSGUI.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TerrariaServerCS</RootNamespace>
-    <AssemblyName>TerrariaServerGUI</AssemblyName>
+    <AssemblyName>TerrariaServerCSGUI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
