added a missing feature: saving custom config file names. fixed several issues with multiple config file saving and loading. hitting "enter" in the command box now clears the box.

--- a/TerrariaServerCS/TerrariaServerCS.csproj
+++ b/TerrariaServerCS/TerrariaServerCS.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerrariaServerArguments.cs" />
     <Compile Include="TerrariaServerFactory.cs" />
+    <Compile Include="UI\TerrariaServerButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
